--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
       "description": "Default cube exists",
       "severity_icon": "INFO",
       "category_icon": "MESH_CUBE",
-      "issue_expr": "'Cube' in bpy.context.scene.objects",
-      "fix_expr": "bpy.ops.object.select_all(action='DESELECT'); bpy.context.scene.objects['Cube'].select_set(True); context.view_layer.objects.active = bpy.context.scene.objects['Cube']; bpy.ops.object.delete()",
+      "issue_expr": "'Cube' in bpy.data.objects",
+      "fix_expr": "bpy.data.objects.remove(objs[\"Cube\"], do_unlink=True)",
       "prop_label_expr": ""
     },
     {
@@ -15,16 +15,18 @@
       "issue_expr": "o.name.split('.')[-1].isnumeric()",
       "fix_expr": "",
       "prop_label_expr": "name",
-      "iterable_expr": "bpy.context.scene.objects",
+      "iterable_expr": "bpy.data.objects",
       "iterable_var": "o"
     },
     {
       "description": "Animated seed is disabled",
-      "severity_icon": "INFO",
+      "severity_icon": "ERROR",
       "category_icon": "TIME",
-      "prop_label_expr": "",
-      "issue_expr": "bpy.context.scene.render.engine == 'CYCLES' and not bpy.context.scene.cycles.use_animated_seed",
-      "fix_expr": "bpy.context.scene.cycles.use_animated_seed = True"
+      "prop_label_expr": "name",
+      "issue_expr": "curr_scene.render.engine == 'CYCLES' and not curr_scene.cycles.use_animated_seed",
+      "fix_expr": "curr_scene.cycles.use_animated_seed = True",
+      "iterable_expr": "bpy.data.scenes",
+      "iterable_var": "curr_scene"
     }
   ]
 }
