--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,3 +14,4 @@ logo: assets/img/blint-logo.png
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+theme: jekyll-theme-minimal
