--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -11,7 +11,7 @@ jobs:
           pip install sphinx sphinx_rtd_theme sphinx_autodoc_typehints
       - name: Sphinx build
         run: |
-          sphinx-build doc _build
+          sphinx-build -M dirhtml doc _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
