--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme sphinx_autodoc_typehints
+          pip install sphinx sphinx_rtd_theme sphinx_autodoc_typehints sphinx-favicon
       - name: Sphinx build
         run: |
           sphinx-build -b dirhtml doc _build
