#22 internal config rule: check for missing textures

--- a/config.json
+++ b/config.json
@@ -39,6 +39,16 @@
             "prop_label_expr": "my_object.name",
             "iterable_expr": "bpy.data.objects",
             "iterable_var": "my_object"
+        },
+        {
+            "description": "File not found or packed",
+            "enabled": true,
+            "severity_icon": "ERROR",
+            "category_icon": "TEXTURE",
+            "issue_expr": "my_image.source not in {'GENERATED', 'VIEWER'} and not __import__('os').path.isfile(bpy.path.abspath(my_image.filepath)) and my_image.packed_file is None",
+            "prop_label_expr": "my_image.name",
+            "iterable_expr": "bpy.data.images",
+            "iterable_var": "my_image"
         }
     ]
 }
