Fix permissions in manifest

--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -16,7 +16,8 @@ type = "add-on"
 # * "clipboard" (to read and/or write the system clipboard)
 # * "camera" (to capture photos and videos)
 # * "microphone" (to capture audio)
- permissions = ["files"]
+[permissions]
+files = "Read/write to JSON config files on disk"
 
 # Optional link to documentation, support, source files, etc
 # website = "http://extensions.blender.org/add-ons/my-example-package/"
