Ignore .github and docs for build

--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -54,9 +54,11 @@ files = "Read/write to JSON config files on disk"
 
 # Optional: build setting.
 # https://docs.blender.org/manual/en/dev/extensions/command_line_arguments.html#command-line-args-extension-build
- [build]
- paths_exclude_pattern = [
-   "/.git/",
-   "__pycache__/",
-   "venv/",
- ]
+[build]
+paths_exclude_pattern = [
+    "/.git/",
+    "__pycache__/",
+    "venv/",
+    ".github/",
+    "doc/",
+]
