Config rule - accept -1.0 scale and "close enough" values

--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
             "enabled": true,
             "severity_icon": "INFO",
             "category_icon": "MODIFIER",
-            "issue_expr": "tuple(my_object.scale) != (1.0, 1.0, 1.0) and any(m.type in {'BEVEL', 'SOLIDIFY'} for m in my_object.modifiers)",
+            "issue_expr": "not all(__import__('math').isclose(v, 1.0, rel_tol=0.00001) for v in my_object.scale) and not all(__import__('math').isclose(v, -1.0, rel_tol=0.00001) for v in my_object.scale) and any(m.type in {'BEVEL', 'SOLIDIFY'} for m in my_object.modifiers)",
             "prop_label_expr": "my_object.name",
             "iterable_expr": "bpy.data.objects",
             "iterable_var": "my_object"
