--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -18,7 +18,7 @@ type = "add-on"
 # * "microphone" (to capture audio)
 
 # Optional link to documentation, support, source files, etc
-# website = "http://extensions.blender.org/add-ons/my-example-package/"
+website = "https://codeberg.org/semagnum/blint"
 
 # Optional list defined by Blender and server, see:
 # https://docs.blender.org/manual/en/dev/extensions/tags.html
